--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <title>入门html的一天</title>
     </head>
     <body background="http://img03.sogoucdn.com/app/a/100520146/8073ee4eb6076faccfff01651adf01a2" text="#3399FF" link="#AA99EE" alink="#AA0000" vlink="#000000" leftmargin="50" topmargin="50">
-        <a href="http://img03.sogoucdn.com/app/a/100520146/8073ee4eb6076faccfff01651adf01a2" align="center"><font face="宋体"><b>0-0</b></font></a>
+        <a href="https://aidn.jp/mikutap/"><b>0-0</b></font></a>
         <h1 align="center"><font color="#AA99EE"><b><big>Mg</big>+<big>Zn</big>SO<sub>4</sub>==<big>Zn</big>+<big>Mg</big>SO<sub>4</sub></b></font></h1>
         <hr width="90%" color="#AA99EE">
     </body>
