--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
-<html>
+<heml>
+    <meta charset="utf-8">
     <head>
-        <meta charset="utf-8">
-        <meta name="keywords" content="areyouok?">
-        <meta name="description" content="页面说明">
-        <title>入门html的一天</title>
+        <title>学HTML的第二天</title>
     </head>
-    <body background="http://img03.sogoucdn.com/app/a/100520146/8073ee4eb6076faccfff01651adf01a2" text="#3399FF" link="#AA99EE" alink="#AA0000" vlink="#000000" leftmargin="50" topmargin="50">
-        <a href="https://aidn.jp/mikutap/"><b>0-0</b></font></a>
-        <h1 align="center"><font color="#AA99EE"><b><big>Mg</big>+<big>Zn</big>SO<sub>4</sub>==<big>Zn</big>+<big>Mg</big>SO<sub>4</sub></b></font></h1>
-        <hr width="90%" color="#AA99EE">
+    
+    <body topmargin="50" leftmargin="10%" background="http://img03.sogoucdn.com/app/a/100520146/f95895ad222ca9e166eb9b27d5a9c489" link="#000000">
+        4月25日<h1 align="center">Never Give Up</h1>
+        <hr width="80%" color="#000000">
+        <p><br>&nbsp;&nbsp;&nbsp;&nbsp;网页的坑可不是一般地深啊，觉得做完之后我就入门网页前端了。<br>&nbsp;&nbsp;&nbsp;&nbsp;html到css再到js。应该不会都学精的，到时候搬组件就是了。
+        三天内吧HTML标准看完，听说不难。</p>
+        <p align="right"><br>
+            <a href="http://img03.sogoucdn.com/app/a/100520146/f95895ad222ca9e166eb9b27d5a9c489">背景图片连接</a></p>
     </body>
-</html>
+</heml>
